--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ requests
 beautifulsoup4
 crawl4ai
 playwright
-torch
-torchaudio
+torch>=2.6.0
+torchaudio>=2.6.0
 pandas
 tqdm
 imageio-ffmpeg
@@ -15,3 +15,4 @@ sentencepiece
 ctranslate2
 datasets
 bitsandbytes
+accelerate>=0.26.0
